--- a/src/input.css
+++ b/src/input.css
@@ -51,10 +51,13 @@
     }
   }
   .categories-img-left {
-    background: linear-gradient(rgba(33, 33, 33, 0.6),rgba(33, 33, 33, 0.6)),url(../images/categories/category-left.jpg);
-    
+    background: linear-gradient(rgba(33, 33, 33, 0.4),rgba(33, 33, 33, 0.4)),url(../images/categories/category-left.jpg);
+    background-position: center top;
+    background-size: cover;
   }
   .categories-img-right {
-    background: linear-gradient(rgba(33, 33, 33, 0.6),rgba(33, 33, 33, 0.6)),url(../images/categories/category-right.jpg);
+    background: linear-gradient(rgba(33, 33, 33, 0.4),rgba(33, 33, 33, 0.4)),url(../images/categories/category-right.jpg);
+    background-position: center ;
+    background-size: cover;
   }
 }
