--- a/public/styles/app.css
+++ b/public/styles/app.css
@@ -1071,6 +1071,10 @@ video {
   height: 18rem;
 }
 
+.h-\[73px\] {
+  height: 73px;
+}
+
 .max-h-0 {
   max-height: 0px;
 }
@@ -1205,6 +1209,14 @@ video {
 
 .w-72 {
   width: 18rem;
+}
+
+.w-\[66px\] {
+  width: 66px;
+}
+
+.w-\[325px\] {
+  width: 325px;
 }
 
 .max-w-72 {
@@ -1367,6 +1379,14 @@ video {
 .gap-x-10 {
   -moz-column-gap: 2.5rem;
        column-gap: 2.5rem;
+}
+
+.gap-y-10 {
+  row-gap: 2.5rem;
+}
+
+.gap-y-8 {
+  row-gap: 2rem;
 }
 
 .space-y-1 > :not([hidden]) ~ :not([hidden]) {
@@ -2161,6 +2181,14 @@ video {
   color: rgb(253 186 116 / var(--tw-text-opacity));
 }
 
+:is(.dark .dark\:block) {
+  display: block;
+}
+
+:is(.dark .dark\:inline-block) {
+  display: inline-block;
+}
+
 :is(.dark .dark\:flex) {
   display: flex;
 }
@@ -2228,6 +2256,11 @@ video {
 :is(.dark .dark\:text-orange-300) {
   --tw-text-opacity: 1;
   color: rgb(253 186 116 / var(--tw-text-opacity));
+}
+
+:is(.dark .dark\:text-gray-300) {
+  --tw-text-opacity: 1;
+  color: rgb(209 213 219 / var(--tw-text-opacity));
 }
 
 :is(.dark .dark\:hover\:bg-emerald-600:hover) {
@@ -2368,6 +2401,10 @@ video {
     margin-top: 6rem;
   }
 
+  .md\:mt-32 {
+    margin-top: 8rem;
+  }
+
   .md\:inline-block {
     display: inline-block;
   }
@@ -2458,6 +2495,10 @@ video {
 
   .md\:w-80 {
     width: 20rem;
+  }
+
+  .md\:w-auto {
+    width: auto;
   }
 
   .md\:max-w-\[460px\] {
@@ -2608,6 +2649,14 @@ video {
 
   .lg\:w-\[400px\] {
     width: 400px;
+  }
+
+  .lg\:w-\[325px\] {
+    width: 325px;
+  }
+
+  .lg\:w-auto {
+    width: auto;
   }
 
   .lg\:grid-cols-3 {
