--- a/src/input.css
+++ b/src/input.css
@@ -47,7 +47,7 @@
       background:linear-gradient(rgba(243, 244, 246,0.65),rgba(243, 244, 244,0.65)),url(../images/products-bg.png);
       background-size: 100%;
       background-repeat: no-repeat;
-      height: 900px;
+      /* height: 900px; */
     }
   }
   .categories-img-left {
@@ -60,4 +60,14 @@
     background-position: center ;
     background-size: cover;
   }
+  /* @media screen and (min-width:1400px) {
+   .footer-content {
+    @apply flex flex-row items-start justify-between mb-10
+   }
+  }
+  @media screen and (max-width:1400px) {
+    .footer-content {
+      @apply flex flex-col items-center justify-between mb-10
+    }
+  } */
 }
